# datamarket-databricks

./: .cursorrules  .databricksignore  .env.example  .gitignore  LICENSE  README.md  SOLUTION_OVERVIEW.md  databricks.yml  demo-requirements.md  deploy.sh  pyproject.toml
.cursor/rules/: data-generation.md  databricks-apps.md  databricks-expert.md  databricks-platform.md  demo-builder.md  frontend-agent-integration.md  genie-and-agents.md  react-styling.md
docs/: budget_data_dictionary.md  consumption_model.md  cursor-usage.md  databricks-patterns.md  deploy_guide.md  dna_portal_user_guide.md  marketplace_guide.md  user_guide.md  vendor_data_dictionary.md
resources/: lac_dna_portal.job.yml
schema/: clear_requests.sql  schema.sql  seed.sql
scripts/: deploy.sh  deploy_notebook.py  notebook_deploy_lib.py  setup_notebook.py
src/app/: README.md  app.js  app.yaml  app.yaml.example  databricks.js  db.js  deploy.sh  index.html  manifest.yaml  package-lock.json  package.json
src/app/lib/: roles.js
src/app/routes/: config.js  demo.js  products.js  requests.js  users.js
src/app/src/: App.jsx
src/app/src/components/: DataMarketAssistant.jsx  DatabricksLogo.jsx  FirstRunWizard.jsx  ImportUCModal.jsx
src/app/src/config/: navigation.js
src/app/src/context/: AppConfigContext.jsx  PersonaContext.jsx
src/app/src/lib/: roles.js
src/app/src/pages/: AIExplorerPage.jsx  AboutPage.jsx  AccessRequestsPage.jsx  BudgetFinancePage.jsx  ChatPage.jsx  CustomerSegmentationPage.jsx  DataMarketAdminPage.jsx  (+18 more)
src/datamarket/: main.py
src/lac_dna_portal/: main.py
(+8 files in other folders)
